# Secret-Santa-CLI

./: .gitignore  README.md  pyproject.toml
secret_santa/: __init__.py  cli.py  email.py  matcher.py  models.py  storage.py
tests/: test_cli.py  test_email.py  test_matcher.py
